# fin-tracker-ui

./: README.md  app.py  data.py  duckdb_importer.py  portfolio.db  pyproject.toml  readtable2.py  run_script.sh
app/: PerformanceTable.py  config.py  data.py  duckdb_importer.py  utils.py  view.py
app/pages/: AssetCorrelation.py  CrossAssetRegime.py  FactorDashboard.py  PerformanceChart.py  PortfolioManager.py  PukeDetector.py  PullbackScanner.py  SectorScreener.py  SentimentWidget.py  ThematicDashboard.py
data/: performance.parquet  performance_unencrypted.parquet  prices.parquet  prices_unencrypted.parquet
research/: 0000scratchpad.sql  JustPark Earnings 3-Oct-25-11.08.csv  JustPark Transactions 3-Oct-25-11.08 copy.csv  hierachical_clustering_risk_parity.py  ocr_exporer.py  optimisation.py  pdf_converter.py  plot_3_risk_parity_ledoit_wolf.py  portfolioopt.py  readtable.py  readtable2.py  readtable3.py
research/foo/: foo-page-1-table-2.csv  foo-page-10-table-1.csv  foo-page-11-table-1.csv  foo-page-12-table-1.csv  foo-page-3-table-2.csv  foo-page-4-table-1.csv  foo-page-5-table-1.csv  foo-page-6-table-1.csv  foo-page-7-table-1.csv  foo-page-8-table-2.csv  foo-page-9-table-1.csv
research/foo/New Folder With Items/: foo-page-1-table-1.csv  foo-page-3-table-1.csv  foo-page-8-table-1.csv
