[tool.poetry]
name = "fin-tracker-ui"
version = "0.1.0"
description = ""
authors = ["Dorian Beganovic"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
streamlit = "^1.42.0"
duckdb = "^1.2"
matplotlib = "^3.8.3"
skfolio = "^0.3.1"

# these are OK tools but much harder to install then skfolio
#[tool.poetry.group.portfolioopt.dependencies]
#riskparityportfolio = "^0.5.1"
#tqdm = "^4.66.4"
#jax = {extras = ["cpu"], version = "^0.4.26"}
#quadprog = "^0.1.12"
#
#[tool.poetry.group.riskbudget.dependencies]
#pyrb = {git = "https://github.com/jcrichard/pyrb"}


# testing for portfolio optimisation
#scikit-learn = "^1.4.2"
#cmake = "^3.28.3"
riskfolio-lib = "^6.3.1"

[tool.poetry.group.dev.dependencies]
watchdog = "^4.0.0"
ruff = "*"

[build-system]
requires = ["poetry-core", "cmake"]
build-backend = "poetry.core.masonry.api"
