[tool.poetry]
name = "fin-tracker-ui"
version = "0.1.0"
description = ""
authors = ["Dorian Beganovic"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
streamlit = "*"
duckdb = "*"
matplotlib = "*"
skfolio = "*"

# these are OK tools but much harder to install then skfolio
#[tool.poetry.group.portfolioopt.dependencies]
#riskparityportfolio = "^0.5.1"
#tqdm = "^4.66.4"
#jax = {extras = ["cpu"], version = "^0.4.26"}
#quadprog = "^0.1.12"
#
#[tool.poetry.group.riskbudget.dependencies]
#pyrb = {git = "https://github.com/jcrichard/pyrb"}


# testing for portfolio optimisationasasd
#scikit-learn = "^1.4.2"
#cmake = "^3.28.3"
riskfolio-lib = "^6.3.1"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
watchdog = "^4.0.0"
ruff = "*"

[build-system]
requires = ["poetry-core", "cmake"]
build-backend = "poetry.core.masonry.api"
